--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "puppeteer": "^24.10.2",
     "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "cookie-parser":"1.4.7"
   }
 }
