--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
-    "puppeteer": "^24.10.2",
+    "puppeteer-core": "^24.10.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "cookie-parser":"1.4.7"
